--- a/lms/static/js/fixtures/discovery.html
+++ b/lms/static/js/fixtures/discovery.html
@@ -4,7 +4,7 @@
     <form class="wrapper-search-input">
       <label for="discovery-input" class="sr">Search for a course</label>
       <input id="discovery-input" class="discovery-input" placeholder="Search for a course" type="text"/>
-      <button type="submit" class="button postfix discovery-submit" aria-label="Search">
+      <button type="submit" class="button postfix discovery-submit" aria-label="Search" data-test="check2">
         <span class="icon fa fa-search" aria-hidden="true"></span>
         <div aria-live="polite" aria-relevant="all">
           <div id="loading-indicator" class="loading-spinner hidden">
